syntax = "proto3";

package api;

option go_package = "github.com/nikhovas/grpc_course/2024_autumn/week7/api";

service KeyValueService {
    rpc SetValue (SetValueRequest) returns (SetValueResponse);
    rpc GetValue (GetValueRequest) returns (GetValueResponse);
  }
  
  message SetValueRequest {
    string key = 1;
    string value = 2;
  }
  
  message SetValueResponse {}
  
  message GetValueRequest {
    string key = 1;
  }
  
  message GetValueResponse {
    string value = 1;
  }